add violet border

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 body{
     background-color: black;
+    border: 5px solid violet;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 h1{
     color: lightgreen;
     background: violet;
     cursor:pointer;   
+}
+
+html{
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
